crates/compiler/frontend/tests/snapshots/errors__compilation_errors.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(reporter.into_reported(), &sources)"
input_file: crates/compiler/frontend/tests/data/implicit-visibility.reds
---
[LESS_VISIBLE_OVERRIDE] At tests/data/implicit-visibility.reds:9:16
  private func Public() {} // Error
               ^^^^^^
method overrides cannot be less visibile than the method they override (public)

[LESS_VISIBLE_OVERRIDE] At tests/data/implicit-visibility.reds:10:16
  private func Protected() {} // Error
               ^^^^^^^^^
method overrides cannot be less visibile than the method they override (protected)

[LESS_VISIBLE_OVERRIDE] At tests/data/implicit-visibility.reds:15:18
  protected func Public() {} // Error
                 ^^^^^^
method overrides cannot be less visibile than the method they override (public)

[PROTECTED_MEMBER_ACCESS] At tests/data/implicit-visibility.reds:36:3
  class.Protected(); // Error
  ^^^^^^^^^^^^^^^^^
member `Protected` of type `ChildWithImplicit` is protected

[PRIVATE_MEMBER_ACCESS] At tests/data/implicit-visibility.reds:37:3
  class.Private(); // Error
  ^^^^^^^^^^^^^^^
member `Private` of type `ChildWithImplicit` is private
