crates/compiler/frontend/tests/snapshots/errors__compilation_errors@comparator.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(reporter.into_reported(), &sources)"
input_file: crates/compiler/frontend/tests/data/comparator.reds
---

