crates/compiler/frontend/tests/snapshots/errors__compilation_errors@enum-checks.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(diagnostics, &sources)"
input_file: crates/compiler/frontend/tests/data/enum-checks.reds
---
[DUP_VARIANT_VAL] At tests/data/enum-checks.reds:6:3
  DuplicateOne = 1,
  ^^^^^^^^^^^^^^^^
duplicate variant value

[DUP_VARIANT_NAME] At tests/data/enum-checks.reds:9:3
  DuplicatedName = 4,
  ^^^^^^^^^^^^^^^^^^
duplicate variant name
