crates/compiler/frontend/tests/snapshots/errors__compilation_errors@inference.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(diagnostics, &sources)"
input_file: crates/compiler/frontend/tests/data/inference.reds
snapshot_kind: text
---
At tests\data\inference.reds:12:10
  return i;
         ^
type mismatch: found String when expected Int32

At tests\data\inference.reds:10:7
  let f = (a) -> (b, c) -> (d) -> d(a(b), c);
      ^^
type is too broad (String <: T <: Int32 for some type T), consider adding type annotations
