crates/compiler/frontend/tests/snapshots/errors__compilation_errors@interpolation-error.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(reporter.into_reported(), &sources)"
input_file: crates/compiler/frontend/tests/data/interpolation-error.reds
---
[UNRESOLVED_REF] At tests/data/interpolation-error.reds:3:18
  return s"asd \(unresolved)";
                 ^^^^^^^^^^
`unresolved` is not defined
