crates/compiler/frontend/tests/snapshots/errors__compilation_errors@invariance-checks.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(diagnostics, &sources)"
input_file: crates/compiler/frontend/tests/data/invariance-checks.reds
---
[TYPE_ERR] At tests/data/invariance-checks.reds:12:21
  AcceptsClassArray(arr);
                    ^^^
type mismatch: found Class when expected Subclass
  when comparing array<Subclass> and array<Class>
