crates/compiler/frontend/tests/snapshots/errors__compilation_errors@item-checks.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(reporter.into_reported(), &sources)"
input_file: crates/compiler/frontend/tests/data/item-checks.reds
---
[UNRESOLVED_IMPORT] At tests/data/item-checks.reds:1:1
import NonExisting
^^^^^^^^^^^^^^^^^^
'NonExisting' could not be found

[UNEXPECTED_ITEM] At tests/data/item-checks.reds:3:5
let badTopLevelField: CName;
    ^^^^^^^^^^^^^^^^
items of this type are not allowed here
