crates/compiler/frontend/tests/snapshots/errors__compilation_errors@mixed-ref.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(reporter.into_reported(), &sources)"
input_file: crates/compiler/frontend/tests/data/mixed-ref.reds
---
[INVALID_NEW_USE] At tests/data/mixed-ref.reds:10:15
  let _ = new NeverRef(); // Error
              ^^^^^^^^
this type cannot be constructed with the `new` operator, use `NeverRef()` instead
