crates/compiler/frontend/tests/snapshots/errors__compilation_errors@pattern-checks.reds.snap
---
source: crates/compiler/frontend/tests/errors.rs
expression: "DisplayDiagnostics(reporter.into_reported(), &sources)"
input_file: crates/compiler/frontend/tests/data/pattern-checks.reds
---
[TYPE_ERR] At tests/data/pattern-checks.reds:3:10
  if let Struct { field } = new Struct(1) {
         ^^^^^^
type mismatch: found `Struct` when expected `IScriptable`

[MISSING_BREAK] At tests/data/pattern-checks.reds:7:14
    case let [a]:
             ^^^
`case let` block must end with a `break` or `return` statement
